[workspace]

members = [
    "lib",
    "daemon",
    "check",
    "rootshell",
    "telcom-parser",
    "installer",
    "installer-gui/src-tauri",
    "wifi",
    "tower-db",
]
# at least for now, let's keep installer-gui out of the list of default
# packages. installer-gui is still experimental and requires many new packages
# both from cargo and the underlying operating system
default-members = [
    "lib",
    "daemon",
    "check",
    "rootshell",
    "telcom-parser",
    "installer",
    "wifi",
    "tower-db",
]
resolver = "2"
