[package]
name = "rayhunter-tower-db"
version = "0.1.0"
edition = "2021"

[lib]
name = "tower_db"
path = "src/lib.rs"

[[bin]]
name = "rayhunter-tower-db"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
csv = "1.3"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
